--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
        <link rel="stylesheet" href="./Assets/StyleSheets/style.css">
        <link rel="stylesheet" href="./Assets/StyleSheets/index.css">
        <link rel="stylesheet" href="./Assets/StyleSheets/responsive.css">
-       <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 <body>
@@ -21,34 +21,34 @@
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#sec1">About</a></li>
                 <li><a href="#sec2">Explore</a></li>
-                <li><a href="">ChatNow</a></li>
+                <li><a href="https://mail.google.com/chat/u/0/#chat/welcome" target="_blank">ChatNow</a></li>
                 <button class="more">Love More</button>
             </ul>
         </nav>
         <nav id="nav">
-            <i class="ion-navicon-round"></i>
+            <i class="fa fa-bars"></i>
             <h1>WEB.</h1>
             <ul>
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#sec1">About</a></li>
                 <li><a href="#sec2">Explore</a></li>
-                <li><a href="https://mail.google.com/chats">ChatNow</a></li>
+                <li><a href="https://mail.google.com/chat/u/0/#chat/welcome" target="_blank">ChatNow</a></li>
             </ul>
-            <i class="ion-android-apps" id="oA" onclick="appMenu()"></i>
-            <i class="ion-android-apps" style="display: none;" id="cA" onclick="appMenuC()"></i>
+            <i class="fa fa-globe" id="oA" onclick="appMenu()"></i>
+            <i class="fa fa-globe" style="display: none;" id="cA" onclick="appMenuC()"></i>
             <div id="apps">
                 <li>Web 1</li>
                 <li>Web 2</li>
                 <li>Web 3</li>
             </div>
-            <i class="ion-ios-moon"></i>
+            <i class="fa fa-moon"></i>
         </nav>
         <div class="innerContainer">
             <br>
             <h2>How to express what you are feeling?</h2>
             <div class="buttons">
-                <button class="button backward"><i class="ion-ios-arrow-thin-left"></i></button>
-                <button class="button forward"><i class="ion-ios-arrow-thin-right"></i></button>
+                <button class="button backward"><i class="fa fa-angle-left"></i></button>
+                <button class="button forward"><i class="fa fa-angle-right"></i></button>
             </div>
         </div>
   
@@ -89,7 +89,7 @@
     <section id="sec2">
         <div class="sec2HT">
             <h2>Steps we were gone through.!</h2>
-            <p>Here are some points which are gonna tell how/why we are like now.. An Elaborator of all.. Let's See.. </p>
+            <p>Here are some points which are gonna tell how/why we are like now.. An Elaborator of all.. .. </p>
         </div>
         <div class="sec2Box">
                <div class="sec2Num">
