--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
 
         <nav>
             <ul>
-                <li><a href="#"><i class="ion-ios-home"></i></a></li>
-                <li><a href="#sec1"><i class="ion-more"></i></a></li>
-                <li><a href="#sec2"><i class="ion-android-person"></i></a></li>
+                <li><a href="#"><i class="fa fa-home"></i></a></li>
+                <li><a href="#sec1"><i class="fa fa-angle-up"></i></a></li>
+                <li><a href="#sec2"><i class="fa fa-user"></i></a></li>
             </ul>
         </nav>
     </footer>
